Fixed: filter button on mobile

--- a/public/static/css/home.css
+++ b/public/static/css/home.css
@@ -123,7 +123,6 @@
       .search-button {
         top: 27px;
         right: 6px;
-        text-indent: -9999px;
         padding: 12px;
 
         img {
